Update to start shifting towards more generic adapter format.

--- a/etc/server/docker-services.yml
+++ b/etc/server/docker-services.yml
@@ -7,7 +7,7 @@ wheel-factory:
 
 
 nginx-proxy:
-  image: jwilder/nginx-proxy
+  image: jwilder/nginx-proxy:0.1.0
   ports:
     - 80:80
     - 443:443
